# banquet

./: .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: tests.yml
banquet/: gateway.py  handler.py  router.py  server.py
tests/: test_builder.py  test_router.py
